Fix long log line does not wrap properly (#587)

--- a/web/src/pages/PullRequest/Checks/Checks.module.scss
+++ b/web/src/pages/PullRequest/Checks/Checks.module.scss
@@ -249,7 +249,7 @@
   }
 
   .stepLogContainer {
-    padding: 15px 36px;
+    padding: 15px 10px 15px 36px;
     flex-shrink: 0;
 
     .consoleLine {
